force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__Icon__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Icon__c</fullName>
    <description>Icon for this custom action</description>
    <inlineHelpText>Icon for this custom action</inlineHelpText>
    <label>Icon</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>3dots</fullName><default>false</default><label>3dots</label></value>
            <value><fullName>add</fullName><default>false</default><label>add</label></value>
            <value><fullName>adduser</fullName><default>false</default><label>adduser</label></value>
            <value><fullName>align-justify</fullName><default>false</default><label>align-justify</label></value>
            <value><fullName>approval</fullName><default>false</default><label>approval</label></value>
            <value><fullName>apps</fullName><default>false</default><label>apps</label></value>
            <value><fullName>arrowdown</fullName><default>false</default><label>arrowdown</label></value>
            <value><fullName>arrowup</fullName><default>false</default><label>arrowup</label></value>
            <value><fullName>attach</fullName><default>false</default><label>attach</label></value>
            <value><fullName>attention</fullName><default>false</default><label>attention</label></value>
            <value><fullName>attention-circled</fullName><default>false</default><label>attention-circled</label></value>
            <value><fullName>back</fullName><default>false</default><label>back</label></value>
            <value><fullName>ban</fullName><default>false</default><label>ban</label></value>
            <value><fullName>bold</fullName><default>false</default><label>bold</label></value>
            <value><fullName>builder</fullName><default>false</default><label>builder</label></value>
            <value><fullName>calendar</fullName><default>false</default><label>calendar</label></value>
            <value><fullName>cancel</fullName><default>false</default><label>cancel</label></value>
            <value><fullName>cancel-circled</fullName><default>false</default><label>cancel-circled</label></value>
            <value><fullName>ccw</fullName><default>false</default><label>ccw</label></value>
            <value><fullName>center_align_text</fullName><default>false</default><label>center_align_text</label></value>
            <value><fullName>chart</fullName><default>false</default><label>chart</label></value>
            <value><fullName>chat</fullName><default>false</default><label>chat</label></value>
            <value><fullName>check</fullName><default>false</default><label>check</label></value>
            <value><fullName>chevrondown</fullName><default>false</default><label>chevrondown</label></value>
            <value><fullName>chevronleft</fullName><default>false</default><label>chevronleft</label></value>
            <value><fullName>chevronright</fullName><default>false</default><label>chevronright</label></value>
            <value><fullName>chevronup</fullName><default>false</default><label>chevronup</label></value>
            <value><fullName>circle-empty</fullName><default>false</default><label>circle-empty</label></value>
            <value><fullName>clear</fullName><default>false</default><label>clear</label></value>
            <value><fullName>clock</fullName><default>false</default><label>clock</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>