force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__Location__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Location__c</fullName>
    <description>Location of this action on the page.</description>
    <inlineHelpText>Location of this action on the page.</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBQQ__Page__c</controllingField>
        <valueSetDefinition>
            <value><fullName>Quote</fullName><default>true</default><label>Quote</label></value>
            <value><fullName>Quote/Group</fullName><default>false</default><label>Quote/Group</label></value>
            <value><fullName>Group</fullName><default>false</default><label>Group</label></value>
            <value><fullName>Line</fullName><default>false</default><label>Line</label></value>
            <value><fullName>Configurator</fullName><default>false</default><label>Configurator</label></value>
            <value><fullName>Quote Panel</fullName><default>false</default><label>Quote Panel</label></value>
            <value><fullName>Account Panel</fullName><default>false</default><label>Account Panel</label></value>
            <value><fullName>Contract Panel</fullName><default>false</default><label>Contract Panel</label></value>
            <value><fullName>Opportunity Panel</fullName><default>false</default><label>Opportunity Panel</label></value>
            <value><fullName>Order Panel</fullName><default>false</default><label>Order Panel</label></value>
            <value><fullName>Quote Document Panel</fullName><default>false</default><label>Quote Document Panel</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>