force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__Page__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Page__c</fullName>
    <description>The page of which to add the custom action.</description>
    <inlineHelpText>The page of which to add the custom action.</inlineHelpText>
    <label>Page</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Product Configurator</fullName><default>false</default><label>Product Configurator</label></value>
            <value><fullName>Quote Line Editor</fullName><default>true</default><label>Quote Line Editor</label></value>
            <value><fullName>Quote Detail</fullName><default>false</default><label>Quote Detail</label></value>
            <value><fullName>Account Detail</fullName><default>false</default><label>Account Detail</label></value>
            <value><fullName>Contract Detail</fullName><default>false</default><label>Contract Detail</label></value>
            <value><fullName>Opportunity Detail</fullName><default>false</default><label>Opportunity Detail</label></value>
            <value><fullName>Order Detail</fullName><default>false</default><label>Order Detail</label></value>
            <value><fullName>Quote Document Detail</fullName><default>false</default><label>Quote Document Detail</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>