force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Type__c</fullName>
    <description>UI element that this custom action is rendered as.</description>
    <inlineHelpText>UI element that this custom action is rendered as.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Button</fullName><default>false</default><label>Button</label></value>
            <value><fullName>Menu</fullName><default>false</default><label>Menu</label></value>
            <value><fullName>Separator</fullName><default>false</default><label>Separator</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>